--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
